--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,5 +1,5 @@
 import {jane, john} from '../data/authors.js';
-import Copyright from '../components/copyright.js';
+import Copyright from '../components/copyright.jsx';
 
 export const meta = {
     date: '2020-01-01',
