--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,9 +1,9 @@
-import {jane, john} from '../data/authors.js';
+import {janeDoe, johnDoe} from '../data/authors.js';
 import Copyright from '../components/copyright.jsx';
 
 export const meta = {
     date: '2020-01-01',
-    authors: [jane, john],
+    authors: [janeDoe, johnDoe],
 };
 
 # Title
